# ros_internet_speed

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
msg/: InternetSpeedReport.msg
node/: internet_speed_node
src/speedtest_cli/: speedtest_cli.py
srv/: GetReport.srv
